UAE-564_108 prevent paypal button from overflowing it's container in cart

--- a/app/design/frontend/UnitedArtsEducation/unitednow/Magento_Checkout/web/css/source/_extend.less
+++ b/app/design/frontend/UnitedArtsEducation/unitednow/Magento_Checkout/web/css/source/_extend.less
@@ -239,4 +239,16 @@
         line-height: 22px;
         z-index: 103;
     }
+    //keep "Checkout with PayPal" button from overflowing
+    .checkout-cart-index{
+        .cart-summary{
+            .checkout-methods-items{
+                .paypal{
+                    input{
+                        max-width:100%;
+                    }
+                }
+            }
+        }
+    }
 }
